@@ -10,6 +10,7 @@
 #define CREATIONDATE
 
 #define MAX_CODE 0x110000
+#define MAX_VF_CODE 0x1000000
 #define MAX_2BYTES_CODE 0x10000
 #define VF_MEM_UNIT 0x10000
 #define CD_IDX(i)  ((i>=MAX_2BYTES_CODE ? MAX_2BYTES_CODE : i))
